# teach_model_game

./: .gitignore  LICENSE  README.md  index.html  main.js  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
data/: fixedEvents.json  parameters.json
public/: index.html  situations.json  style.css
src/: App.svelte  classes.ts  main.ts  types.svelte  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
